updated buttons layout issue

--- a/styles.css
+++ b/styles.css
@@ -1021,8 +1021,8 @@ section {
 /* Scroll to Top Button */
 .scroll-top {
     position: fixed;
-    bottom: 2rem;
-    right: 8rem;
+    bottom: calc(2rem + 80px);
+    right: calc(2rem + 70px);
     width: 50px;
     height: 50px;
     background: var(--primary-color);
@@ -1041,8 +1041,8 @@ section {
 
 @media (max-width: 640px) {
     .scroll-top {
-        right: 2rem;
-        bottom: 8rem;
+        right: calc(2rem + 30px);
+        bottom: calc(2rem + 80px);
     }
 }
 
